admin login and updated swagger
