# apidoc/swagger.yaml
@@ -30,47 +30,14 @@ paths:
                 token:
                   type: "string"
                   example: "uejicqysgxb93ns.mbjksx"
-                password:
-                  type: "string"
-                  example: "124sdf5#ca"
       responses:
         200:
           description: "successful operation"
           content:
             application/json:
               schema:
-                type: "object"
-                properties:
-                  id:
-                    type: "string"
-                    example: "1"
-                  token:
-                    type: "string"
-                    example: ""
-                  name:
-                    type: "string"
-                    example: "nagasai"
-                  reportee:
-                    type: "string"
-                    example: "1"
-                  role:
-                    type: "string"
-                    example: "employee"
-                  email:
-                    type: "string"
-                    example: "nagasai@webileapps.com"
-                  phone:
-                    type: "string"
-                    example: "1234567890"
-                  is_active:
-                    type: "boolean"
-                    example: true
-                  total_leaves:
-                    type: "number"
-                    example: 11
-                  available_leaves:
-                    type: "number"
-                    example: 1
+                allOf:
+                  - $ref: "#/components/schemas/User"
         400:
           description: "Invalid ID supplied"
         404:
@@ -275,31 +242,6 @@ paths:
           description: "No users"
       security:
         - access_token: []
-  /admin/users/sign-in:
-    post:
-      tags:
-        - "Admin"
-      summary: "This will login a user"
-      description: ""
-      operationId: "Logins a user"
-      responses:
-        "200":
-          $ref: "#/components/responses/Authentication"
-        "400":
-          description: "unable to signup please try again"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: "string"
-                  example: "vivan@gmail.com"
-                password:
-                  type: "string"
-                  example: "124sdf5#ca"
   /admin/users/activate/{id}:
     get:
       tags:
@@ -407,13 +349,10 @@ components:
         google-Id:
           type: "string"
           example: "IHJJH7JJJ"
-        password:
-          type: "string"
-          example: "IHJJH7JJJ"
         role:
           type: "string"
           example: "employee"
-        manager:
+        reportee:
           type: "string"
           example: "5shdgfa6asjdfv6sasdfgsid"
     Error:
